--- a/html/project.html
+++ b/html/project.html
@@ -17,104 +17,44 @@
                     </h4>
                 </div>
                 <div class="col-xs-7">
-                    <a target="_blank" ng-href="{{project.web_url}}/tree/develop">
-                        Develop
+                    <a target="_blank" ng-href="{{project.web_url}}/tree/{{project.branches[0]}}">
+                        {{project.branches[0]}}
                     </a>
 
                     <a href="#" class="branch-differences"
-                       ng-class="{'branch-differences-merge-request':project.mergeRequestsDevelopRelease>=1}"
-                       ng-click="project.createMergeRequestDevelopRelease()"
-                       uib-tooltip="{{project.develop_release}} commits in develop are not merged into release. click to create a merge request"
+                       ng-class="{'branch-differences-merge-request':project.mergeRequestsAB>=1}"
+                       ng-click="project.createMergeRequestAB()"
+                       uib-tooltip="{{project.ABDifferences}} commits in {{project.branches[0]}} are not merged into {{project.branches[1]}}. click to create a merge request"
                        tooltip-popup-delay='1000'>
-                        {{project.develop_release}}
+                        {{project.ABDifferences}}
                         <span class="glyphicon glyphicon-import merge-request-icon"></span>
                     </a>
 
-                    <a target="_blank" ng-href="{{project.web_url}}/tree/release">
-                        Release
+                    <a target="_blank" ng-href="{{project.web_url}}/tree/{{project.branches[1]}}">
+                        {{project.branches[1]}}
                     </a>
 
                     <a href="#" class="branch-differences"
-                       ng-class="{'branch-differences-merge-request':project.mergeRequestsReleaseMaster>=1}"
-                       ng-click="project.createMergeRequestReleaseMaster()"
-                       uib-tooltip="{{project.release_master}} commits in release are not merged into master. click to create a merge request"
+                       ng-class="{'branch-differences-merge-request':project.mergeRequestsBC>=1}"
+                       ng-click="project.createMergeRequestBC()"
+                       uib-tooltip="{{project.BCDifferences}} commits in {{project.branches[1]}} are not merged into {{project.branches[2]}}. click to create a merge request"
                        tooltip-popup-delay='1000'>
-                        {{project.release_master}}
+                        {{project.BCDifferences}}
                         <span class="glyphicon glyphicon-import merge-request-icon"></span>
                     </a>
 
-                    <a target="_blank" ng-href="{{project.web_url}}/tree/master">
-                        Master
+                    <a target="_blank" ng-href="{{project.web_url}}/tree/{{project.branches[2]}}">
+                        {{project.branches[2]}}
                     </a>
 
                     <a class="side-link" target="_blank" ng-href="{{project.web_url}}/merge_requests"
                        uib-tooltip="show open merge requests in GitLab"
                        tooltip-popup-delay='1000'
-                       ng-show="project.mergeRequestsDevelopRelease>=1||project.mergeRequestsReleaseMaster>=1">
+                       ng-show="project.mergeRequestsAB>=1||project.mergeRequestsBC>=1">
                         <span class="glyphicon glyphicon-link"></span>
                         view open merge requests
                     </a>
 
-                    <!--<div class="row">-->
-                    <!--<div class="col-xs-1"-->
-                    <!--uib-tooltip="{{project.develop_release}} commit(s) from develop are not in release"-->
-                    <!--tooltip-popup-delay='1000'>-->
-                    <!--<span class="badge">-->
-                    <!--{{project.develop_release}}-->
-                    <!--</span>-->
-                    <!--</div>-->
-                    <!--<div class="col-xs-5">-->
-                    <!--<a ng-href="{{project.web_url}}/tree/develop">Develop</a>-->
-                    <!--<span class="glyphicon glyphicon-chevron-right"></span>-->
-                    <!--<a ng-href="{{project.web_url}}/tree/release">Release</a>-->
-                    <!--</div>-->
-                    <!--<div class="col-xs-6">-->
-                    <!--<button class="btn btn-success btn-xs" ng-class="{'disabled':project.develop_release <= 0}"-->
-                    <!--role="button" ng-click="project.createMergeRequestDevelopRelease()"-->
-                    <!--uib-tooltip="create a merge request from develop to release branch (might take a moment)"-->
-                    <!--tooltip-popup-delay='1000'>-->
-                    <!--<span class="glyphicon glyphicon-plus"></span>-->
-                    <!--Merge Request-->
-                    <!--</button>-->
-                    <!--<a target="_blank" ng-href="{{project.web_url}}/merge_requests"-->
-                    <!--uib-tooltip="{{project.mergeRequestsDevelopRelease}} merge requests from develop to release are currently open"-->
-                    <!--tooltip-popup-delay='1000'>-->
-                    <!--<span class="badge">-->
-                    <!--{{project.mergeRequestsDevelopRelease}}-->
-                    <!--</span>-->
-                    <!--</a>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="row">-->
-                    <!--<div class="col-xs-1"-->
-                    <!--uib-tooltip="{{project.release_master}} commit(s) from release are not in master"-->
-                    <!--tooltip-popup-delay='1000'>-->
-                    <!--<span class="badge">-->
-                    <!--{{project.release_master}}-->
-                    <!--</span>-->
-                    <!--</div>-->
-                    <!--<div class="col-xs-5">-->
-                    <!--<a ng-href="{{project.web_url}}/tree/release">Release</a> <span-->
-                    <!--class="glyphicon glyphicon-chevron-right"></span>-->
-                    <!--<a ng-href="{{project.web_url}}/tree/master">Master</a>-->
-                    <!--</div>-->
-                    <!--<div class="col-xs-6">-->
-                    <!--<button class="btn btn-success btn-xs" ng-class="{'disabled':project.release_master <= 0}"-->
-                    <!--ng-click="project.createMergeRequestReleaseMaster()"-->
-                    <!--uib-tooltip="create a merge request from release to master branch (might take a moment)"-->
-                    <!--tooltip-popup-delay='1000'>-->
-                    <!--<span class="glyphicon glyphicon-plus"></span>-->
-                    <!--Merge Request-->
-                    <!--</button>-->
-                    <!--<a target="_blank" ng-href="{{project.web_url}}/merge_requests"-->
-                    <!--uib-tooltip="{{project.mergeRequestsReleaseMaster}} merge requests from release to master are currently open"-->
-                    <!--tooltip-popup-delay='1000'>-->
-                    <!--<span class="badge">-->
-                    <!--{{project.mergeRequestsReleaseMaster}}-->
-                    <!--</span>-->
-                    <!--</a>-->
-                    <!--</div>-->
-                    <!--</div>-->
                     <a ng-click="project.toggleCommitVisibility()" href="#" class="toggleIcon pull-right"
                        uib-tooltip="show / hide unmerged commits"
                        tooltip-popup-delay='1000'>
