--- a/index.html
+++ b/index.html
@@ -65,12 +65,16 @@
 </div>
 
 <!-- Scripts -->
+<script
+        src="https://code.jquery.com/jquery-2.2.4.min.js"
+        integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+        crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
         integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
         crossorigin="anonymous"></script>
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.3/angular.min.js"></script>
 <script type="text/javascript"
-        src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.min.js"></script>
+        src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.3/angular-animate.min.js"></script>
 <script type="text/javascript" src="js/ui-bootstrap-tpls-1.3.3.min.js"></script>
 <script type="text/javascript" src="config.js"></script>
 <script type="text/javascript" src="js/gitLabApi.js"></script>
